# private-doc-intelligence-platform

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  dependencies.yml  deploy.yml  docker.yml
data/: external_invoices
data/gold/: invoices.json  invoices_100.json  invoices_external.json
docs/: deployment.md  getting-started.md  implementation-notes.md  quickstart.md  roadmap.md  setup.md  step-01-foundation.md  step-02-ocr-service.md  step-07-docker.md  step-11-grafana.md  testing-guide.md  testing.md
helm/doc-intelligence/: Chart.yaml  values.yaml
k8s/: README.md
k8s/base/: api-deployment.yaml  api-hpa.yaml  api-service.yaml  api-servicemonitor.yaml  configmap.yaml  grafana-dashboard-provider.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  ocr-deployment.yaml  ocr-hpa.yaml  ocr-service.yaml  secret.yaml
pipeline/eval/: __init__.py  eval.py  metrics.py
scripts/: evaluate_providers.py  load_external_dataset.py  test-local.sh
services/api/: Dockerfile  __init__.py  main.py  metrics.py
services/drift/: service.py
services/extraction/: __init__.py  base.py  factory.py  local_provider.py  ollama_provider.py  openai_provider.py  schema.py  service.py
services/ocr/: Dockerfile  __init__.py  factory.py  paddle_service.py  service.py
services/queue/: tasks.py  worker.py
services/shared/: config.py
services/storage/: service.py
tests/integration/: test_extraction_integration.py
tests/unit/: test_api.py  test_batch_api.py  test_config.py  test_drift.py  test_eval_metrics.py  test_extraction_base.py  test_extraction_factory.py  test_extraction_service.py  test_local_provider.py  (+6 more)
(+20 files in other folders)
