[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["services", "services.shared", "services.ocr", "services.api", "services.extraction", "pipeline", "pipeline.eval"]

[project]
name = "private-doc-intelligence-platform"
version = "0.1.0"
description = "Production-grade document intelligence platform on Kubernetes"
requires-python = ">=3.11"
authors = [
    {name = "Yrgen", email = "yrgen@yrgenkuci.com"}
]
readme = "README.md"
license = {text = "MIT"}

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
explicit_package_bases = true
mypy_path = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
# Test markers
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring external services",
]
# Suppress deprecation warnings from third-party libraries
# pytesseract uses pkgutil.find_loader (deprecated in 3.12, removed in 3.14)
# Issue: https://github.com/madmaze/pytesseract/issues/XXX
# TODO: Remove filter when pytesseract updates to importlib.util.find_spec
filterwarnings = [
    "ignore::DeprecationWarning:pytesseract.*",
]

